--- a/public/style.css
+++ b/public/style.css
@@ -9,12 +9,14 @@
 .list-group-item{
 	cursor :pointer;
 	width :30em;
-	display: 
+	
 }
 
 .list-inline-item:hover{
 	background-color: #eee;
-	cursor: pointer
+	cursor: pointer;
+	transition: ease-in-out;
+	transition-duration: 0.5s
 }
 .media-object{
 	margin-left: 1.2em;
@@ -55,7 +57,8 @@
 }
 .pagination {
 	display: inline-block;
-	margin-left: 5.7em
+	margin-left: 5.7em;
+	
 	
 }
 
@@ -73,4 +76,8 @@
 	cursor: pointer
 }
 
-.pagination li:hover:not(.active) {background-color: #ddd;border-radius: 50% ;cursor: pointer}
+.pagination li:hover:not(.active) {
+	background-color: #ddd;
+	border-radius: 50% ;
+	cursor: pointer;
+}
