--- a/public/style.css
+++ b/public/style.css
@@ -1,74 +1,134 @@
-
-
+*{
+	font-family: 'Bitter', serif;
+}
+nav{
+	box-shadow: 2px 4px 3px #888888 !important;
+	padding: 1.5rem 2rem !important;
+	background: inherit !important;
+	background-image: url('grey.png') !important
+}
+body{
+	background-image: url('grey.png');
+	background-size: cover
+}
+.btn{
+	margin-right:1em;
+	background: inherit;
+	border: none
+}
+.btn:hover{
+	background:#fff;
+	color: black; 
+	opacity: 0.7;
+	transition: ease-in-out;
+	transition-duration: 0.8s;
+	transform: scale(1.2)
+}
+.btn:focus,.btn:active {
+	outline: none !important;
+	box-shadow: none;
+ }
 
 .video-item img{
 	max-width : 64px;
 }
 
-
+.list-inline{
+	margin-right: 2em
+}
 .list-group-item{
 	cursor :pointer;
 	width :30em;
 	
+	
+	
+}
+.form-control{
+	border: none;
+	outline-offset: none;
+	margin-right: 1.5em !important
 }
 
-.list-inline-item:hover{
-	background-color: #eee;
-	cursor: pointer;
-	transition: ease-in-out;
-	transition-duration: 0.5s
-}
+
 .media-object{
 	margin-left: 1.2em;
-	border : 2px solid #eee;
+	
 	
 }
 .media-heading{
 	margin-left: 1em;
-	font-size: 0.60em;
+	font-size: 0.70em;
 	font-family: 'Bitter', serif;
 }
 .card{
 	float: left !important;
 	max-width: 30em !important;
-	margin-left:2em
-}
+	margin-left:1em;
+	background: inherit;
+	border: none !important
+}	
 .card-text{
 	font-size: 1em;
-    font-family: 'Bitter', serif;	
+	font-family: 'Bitter', serif;
+	text-align: center	
 }
 .card-img-top{
 	max-width: 30em !important;
-	padding: 1em
+	padding: 1em;
+	max-height: 15em;
+	border:1px solid #ccc;
+    border-bottom:3px solid #bbb;
+    border-top:2px solid #ddd;
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+	
 }
 
 
 .list-inline-item{
-	border : 3px solid #eee;
+	
 	padding: 0.9em;
 	width : 16em;
 	height : 6em;
 	float: right !important;
-	overflow: hidden
+	overflow: hidden;
+	margin-bottom: 0.4em;
+	transition: transform .2s;
+	border-radius: 6px;
 	
+	
+}
+.list-inline-item:hover{
+	background: #fff;
+	cursor: pointer;
+	transition: ease-in-out;
+	transition-duration: 0.4s;
+	transform: scale(1.3);
+	box-shadow: 8px 7px 5px #888888 !important;
+	letter-spacing: 1.7px
 }
 .list-inline-item:last-child{
 	margin-right:0.5em
 }
 .pagination {
-	display: inline-block;
+	display: table;
 	margin-left: 5.7em;
-	
-	
+	margin: 0 auto;
+    margin-bottom: 2em; 
+    margin-top: 3em 	
 }
 
 .pagination li {
     color: black;
     float: left;
     padding: 8px 16px;
-    text-decoration: none;
+	text-decoration: none;
+	opacity: 0.6
 }
-
+.pagination li:first-child{
+	margin-left:2em
+}
 .pagination li.active {
     background-color:#0069D8;
 	color: white;
@@ -77,7 +137,24 @@
 }
 
 .pagination li:hover:not(.active) {
-	background-color: #ddd;
+	background-color: #fff;
 	border-radius: 50% ;
 	cursor: pointer;
+	transition: ease-in-out;
+	transition-duration: 0.3s;
+	
+	
+}
+
+#planet {
+	-webkit-animation: rotation 30s infinite linear;
+}
+
+@-webkit-keyframes rotation {
+	from {
+			-webkit-transform: rotate(0deg);
+	}
+	to {
+			-webkit-transform: rotate(359deg);
+	}
 }
